[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DayClock.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/DayClock/ScrollFrame.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/DayClock/DayScroll.png" type="Texture" id=3]

[node name="DayClock" type="Control"]
margin_right = 32.0
margin_bottom = 11.0
script = ExtResource( 1 )

[node name="ScrollingImage" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -4.5
margin_right = 15.0
margin_bottom = 5.5
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Sprite" type="Sprite" parent="ScrollingImage"]
texture = ExtResource( 3 )
centered = false

[node name="Frame" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 0.952941, 0.737255, 0.768627 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -2.5
margin_right = 59.0
margin_bottom = 6.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = -1
custom_constants/shadow_offset_y = 0
text = "Dawn"

[node name="TimeIncrementer" type="Timer" parent="."]
wait_time = 6.0

[connection signal="timeout" from="TimeIncrementer" to="." method="_on_TimeIncrementer_timeout"]
